[package]
name = "serde_robust_macros"
version = "0.1.0"
authors = ["Jesse Hoobergs <jesse@codebergs.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
serde_robust = { path = "../serde_robust" }

[dev-dependencies]
rustversion = "1.0"
serde = "1.0"
serde_json = "1.0"
trybuild = { version = "1.0.19", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
